# kiro-quickstart

./: .gitignore  Makefile  README.md  pyproject.toml
.kiro/: README.md
.kiro/hooks/: python-quality-checks.kiro.hook  source-to-docs-sync.kiro.hook
.kiro/skills/: atdd.md  docs.md
.kiro/specs/task-creation-and-storage/: design.md  requirements.md  tasks.md
.kiro/specs/task-tracker-cli-poc/: .config.kiro  requirements.md
.kiro/steering/: README.md  code-index.md  development-guide.md  spec-design-construction.md  spec-task-construction.md  testing-guide.md
docs/: ARCHITECTURE.md  DOCUMENTATION_SYNC_2026-04-08.md  MAKEFILE.md  README.md
docs/artifacts/: Execute task 15 Implement CLI layer GREEN.md  Execute task 18 Final checkpoint - All tests GREEN.md
scripts/: README.md  checkpoint.sh
src/task_tracker/: __init__.py  cli.py  filter.py  formatter.py  json_backend.py  models.py  storage.py  store.py
tests/: __init__.py  test_smoke.py
tests/acceptance/: __init__.py  story_dsl.py  system_driver.py  test_task_creation.py
tests/unit/: conftest.py  test_cli.py  test_filter.py  test_formatter.py  test_json_backend.py  test_models.py  test_storage.py
