[project]
name = "task-tracker-cli"
version = "0.1.0"
description = "A POC CLI demonstrating ATDD with four-layer architecture"
requires-python = ">=3.11"
dependencies = ["click>=8.1.7"]

[project.scripts]
task-tracker = "task_tracker.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_tracker"]

[tool.uv]
dev-dependencies = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
